--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
+  "name": "nuxt-app",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
-    "nuxt": "3.0.0-rc.1",
-    "postcss": "^8.4.13",
-    "tailwindcss": "^3.0.24"
+    "@nuxt/devtools": "latest",
+    "nuxt": "^3.7.4",
+    "tailwindcss": "^3.3.3"
   },
   "dependencies": {
-    "@heroicons/vue": "^1.0.6",
-    "bootstrap-icons": "^1.8.1"
+    "@heroicons/vue": "^2.0.18",
+    "autoprefixer": "^10.4.16",
+    "bootstrap-icons": "^1.11.1",
+    "postcss": "^8.4.30"
   }
 }
