--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
+    "@nuxt/devtools": "^3.0.0",
     "nuxt": "^3.7.4",
     "tailwindcss": "^3.3.3"
   },
